# appbench

./: README.md  Work-Description.md  compile_all.sh  create_large_data.sh  createdata.sh  extract_result.sh  install_quartz.sh  runall.sh  runapps.sh  setup.sh  setvars.sh  throttle.sh
Metis/: GNUmakefile  config.status  run.sh
Metis/.deps/: application.d  btree_unit.d  cpumap.d  hist.d  ibs.d  kmeans.d  linear_regression.d  matrix_mult.d  matrix_mult2.d  minmaponly.d  misc.d  mr-types.d  pca.d  profile.d  pthreadpool.d  search_unit.d  sf_sample.d  string_match.d  threadinfo.d  wc.d  wr.d  wrmem.d
Metis/lib/: application.cc
archive/: runapps.sh
archive/gtc-benchmark-nvmalloc/: Makefile  gtc.input.orig  gtthread_spinlocks.c  main.F90  run.sh  setup.F90  snapshot.f90
archive/gtc-benchmark-nvmalloc/nvmalloc/: .jemalloc.c.swo  .nv_map.c.swo  Makefile  arena.c  checkpoint.cc  checkpoint.h  chunk.c  out.txt  red_black_tree.c_orig  redblack.zio  util_func.h
archive/gtc-benchmark-nvmalloc/nvram_lib/: list.h  np_malloc.c  nv_map.c_cpy  nv_map.h  oswego_malloc.c  oswego_malloc.h
archive/gtc-benchmark-nvmalloc/scripts/: compile_gtc.sh  memrun.sh  mount_ext4ramdisk.sh  test.sh
archive/redis/: README.md  redis.conf  runtest-moduleapi
archive/redis-3.0.0/: out.txt  redis.conf
archive/redis-3.0.0/src/: .make-settings  cscope.out  del.tx  release.h  run_redis_bench.sh  s1.out  zmalloc.c
graph500-3.0.0/src/: Makefile  csr_reference.c  graph499_reference_bfs_sssp  main.c  run_graph500.sh
graph500/src/: common.h  run.sh
graphchi/: delete_all_shm.sh  graphchi_metrics.html  graphchi_metrics.txt  libcrypto.so.0.9.8  libssl.so.0.9.8  run.sh  run_large.sh
graphchi/example_apps/: communitydetection  connectedcomponents  minimumspanningforest  pagerank  pagerank_functional  randomwalks  stronglyconnectedcomponents  trianglecounting  unionfind_connectedcomps
graphchi/graphchi-cpp/: Makefile  graphchi_metrics.html  graphchi_metrics.txt  install
gtc/: Makefile  gtc.input  history.out  run.sh  sheareb.out  sheareb_restart.out
gtc-benchmark/: Makefile  RUNdimen.ncd  allocate.f90  dataout3d.f90  fort.222  gtc.input  gtthread_semaphore.c  gtthread_semaphore.h  gtthread_spinlocks.h  main.F90  module.F90  np_malloc.h  restart.f90  test.c
gtc-benchmark/nvmalloc/: .project  c_io.c  c_io.h  chunk_mmap.c  jemalloc.c  list.h  nv_def.h  nv_map.cc  nv_map.h  nv_rmtckpt.c  nv_structs.h  nvmalloc_bench.c  pthread_test.c  red_black_tree.h_orig  remote_chkpt.c  test.c  util_func.cc
gtc-benchmark/nvmalloc/test/osu-micro-benchmarks-3.6/: Makefile.am  README  configure.ac  osu_allgather.c  osu_alltoall.c  osu_alltoallv.c  osu_barrier.c  osu_bcast.c  osu_bibw.c  osu_bw.c  osu_gatherv.c  osu_latency.c  osu_reduce.c  osu_scatter.c  osu_scatterv.c
gtc-benchmark/nvmalloc/test/osu-micro-benchmarks-3.6/.deps/: osu_allgather.Po  osu_alltoall.Po  osu_alltoallv.Po  osu_barrier.Po  osu_bibw.Po  osu_gather.Po  osu_get_bw.Po  osu_get_latency.Po  osu_latency.Po  osu_latency_mt.Po  osu_passive_put_bw.Po  osu_put_bw.Po  osu_put_latency.Po  osu_reduce_scatter.Po
gtc-benchmark/nvram_lib/: c_io.c  nv_def.h  nv_map.c  nv_map.c_rbtree  stack.c
gtc-benchmark/scripts/: run.sh  runexp_variation.sh
redis/: SECURITY.md
redis-3.0.0/: redis.conf
redis-3.0.0/src/: .make-settings  Makefile  del.txt  mm  out.txt  redis-benchmark  redis-check-aof  redis-check-dump  redis-cli  redis-sentinel  redis-server  redis.c  release.h  run.sh
redis/src/: Makefile  aof.c  cluster.h  cluster_legacy.c  cluster_legacy.h  cluster_slot_stats.c  config.h  connection.h  db.c  debug.c  defrag.c  endianconv.h  estore.h  expire.c  geo.c  hyperloglog.c  kvstore.h  lazyfree.c  listpack.c  memory_prefetch.c  memory_prefetch.h  module.c  monotonic.c  mstr.h  multi.c  networking.c  quicklist.h  rax.c  rdb.c  rdb.h  redis-benchmark.c  redis-check-aof.c  redis-cli.c  redismodule.h  replication.c  rio.c  script.c  script_lua.h  sds.c  sds.h  (+11 more)
redis/tests/: instances.tcl  test_helper.tcl
shared_libs/hoardlib/: compile_install_hoard.sh  cscope.out  out.txt
shared_libs/mmap_lib/: Makefile  hash_maps.h  migrate_all_func.txt  migration.c  migration.h  migration_old.c  mmaplib.c  mmaplib.h  out.txt
shared_libs/pagemaptool/: Makefile  page-analyze  page-analyze.cpp  page-collect  page-collect.c
(+194 files in other folders)
